<resources>
    <string name="app_name">Wirtshaus Finder</string>
    <string name="temp">TEMP</string>
    <string name="settings_theme">Select Theme</string>
    <string name="settings">Settings</string>
    <string name="placeholder">Not specified</string>
    <string name="myReservations">My Reservations</string>
    <string name="favouritePlaces">My locations</string>
    <string name="search">Search</string>
    <string name="searchDialogText">Enter the name of the Restaurant below</string>
    <string name="searchDialogHint">Name of Restaurant</string>
    <string name="findNearestRestaurants">Find nearest Restaurants</string>
    <string name="addressStreet">Street-Name</string>
    <string name="addressTown">Town</string>
    <string name="addressPostal">Postal Code</string>
    <string name="addressLonLat">Instead enter longitude and latitude</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="addressAddress">Switch back to address input</string>
    <string name="doublePlaceHolder">0.000</string>
    <string name="titleActivityFavPlaces">FavPlacesActivity</string>
    <string name="reservationButton">RESERVE</string>
    <string name="persons">Persons</string>
    <string name="intPlaceHolder">0</string>
    <string name="start">Start-Time</string>
    <string name="end">End-Time</string>
    <string name="date">Date</string>
    <string name="timePlaceHolder">00:00</string>
    <string name="searchRadius">Select search Radius</string>
    <string name="reservationsInfo">Your Reservations will be saved here. Please be sure you saved them elsewhere, where they can\'t get lost.\n\nIf you uninstall the app, the Reservations will no longer be saved.</string>
    <string name="reservationDetail">Your Reservation</string>
    <string name="minus">-</string>
    <string name="datePlaceHolder">00.00.0000</string>
    <string name="tableInformation1">A table for </string>
    <string name="tableInformation2"> Persons</string>
    <string name="cancelReservationButton">Cancel reservation</string>
    <string name="reservationID">ReservationID</string>
    <string name="loading">Loading…</string>
    <string name="setDate">Set Date</string>
    <string name="restaurant">Restaurant: </string>
    <string name="name">Name</string>
    <string name="nameForReservation">Name for Reservation</string>
    <string name="seats">Seats (e.g. 5)</string>
    <string name="noInfos">No information available</string>
    <string name="personsForButton">[PERSONS]</string>
    <string name="noOpeningTimeInformation">No information about opening time</string>
    <string name="location">Location:</string>
    <string name="selectTime">SELECT TIME</string>
    <string name="welcome">Welcome! \n\nWith this app you can search for your nearest Restaurants.\n\nYou can add your favourite Restaurants via search \n\nYou can even Reserve \nin all Restaurants!</string>
    <string name="increaseSearch">No Restaurants in the selected radius! \n\nYou can increase the selected Radius in the Settings.</string>

</resources>
