<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ReservationDetailActivity">

    <TextView
        android:id="@+id/reservation_detail_tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginBottom="15sp"
        android:text="@string/reservationDetail"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/reservation_detail_restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="15sp"
        android:text="@string/loading"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="30sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reservation_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/datePlaceHolder"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reservation_detail_time_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/timePlaceHolder"
            android:textAlignment="textEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reservation_detail_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reservation_detail_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/timePlaceHolder"
            android:textAlignment="viewStart"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="30sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reservation_detail_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tableInformation1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/reservation_detail_persons_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:text="@string/intPlaceHolder"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reservation_detail_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tableInformation2"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/reservation_detail_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="30sp"
        android:text="@string/cancelReservationButton" />
</LinearLayout>