<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:importantForAutofill="no"
    android:orientation="vertical"
    tools:context=".activities.ReservationSendActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="5sp"
        android:background="@drawable/customborder"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reservation_send_restaurantinformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/restaurant"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/reservation_send_opening_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="5sp"
            android:text="@string/noOpeningTimeInformation"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/reservation_send_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/reservation_send_date_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:layout_weight="1"
            android:text="@string/setDate" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/reservation_send_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:hint="@string/datePlaceHolder"
            android:textAlignment="textStart"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reservation_send_tv1"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/reservation_send_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:hint="@string/timePlaceHolder"
            android:importantForAutofill="no"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/reservation_send_button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectTime" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reservation_send_tv2"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/reservation_send_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="10sp"
            android:hint="@string/timePlaceHolder"
            android:importantForAutofill="no"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/reservation_send_button_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectTime" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:text="@string/persons"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/reservation_send_persons_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minWidth="30sp"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/reservation_send_button_reserve"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="10sp"
        android:text="@string/reservationButton" />
</LinearLayout>