<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_reserve_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/persons"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/dialog_reserve_et_persons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:hint="@string/intPlaceHolder"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_weight="1"
            android:hint="@string/date"
            android:text="@string/date"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="@string/timePlaceHolder"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="@string/timePlaceHolder"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>