<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_address_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_address_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addressStreet"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dialog_address_et_street"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/addressStreet"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/dialog_address_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addressTown"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dialog_address_et_town"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/addressTown"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="24sp" />

        <Button
            android:id="@+id/dialog_address_btn_switch_lon_lat"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_current_switch_icon_dark"
            android:text="@string/addressLonLat" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_address_lon_lat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_address_tv4"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dialog_address_et_lat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/doublePlaceHolder"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_address_tv3"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:text="@string/lon"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/dialog_address_et_lon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/doublePlaceHolder"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/dialog_address_btn_switch_address"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_current_switch_icon_dark"
            android:text="@string/addressAddress" />
    </LinearLayout>

</LinearLayout>